--- a/SpaDay/Views/Spa/Menu.cshtml
+++ b/SpaDay/Views/Spa/Menu.cshtml
@@ -30,9 +30,13 @@
     </ul>
 
     <h5>Nail Services</h5>
-    @if (@ViewBag.manipedi == null)
+    @if (@ViewBag.manipedi == "both")
     {
-        <p> No nail service selected</p>
+<p>
+    Our manicure is a great way to spend 30 minutes of your day! We use shea butter hand cream and the finest gel polish.
+    <br />
+    Relax for 45 minutes in pure luxury! Our massage chairs and experienced nail techs are here to get your feet in shape for sandal season!
+</p>
     }
     else
     {
