--- a/SpaDay/Views/Spa/Index.cshtml
+++ b/SpaDay/Views/Spa/Index.cshtml
@@ -3,25 +3,52 @@
 *@
 @{
 }
-<form method='post'>
+<form method='post' action="/spa">
+
+    Name:
+    <br>
+    <input type='text' name='name'>
+    <br>
+
     Skin type:
-    <br>    
-    <select name='skintype'>
-        <option value='oily'>Oily</option>    
-        <option value='combination'>Combination</option>    
-        <option value='normal'>Normal</option>    
-        <option value='dry'>Dry</option>    
+    <br>
+        <select name='skintype'>
+        <option value='oily'>Oily</option>
+        <option value='combination'>Combination</option>
+        <option value='normal'>Normal</option>
+        <option value='dry'>Dry</option>
     </select>
     <br>
 
     Manicure or Pedicure?
-    <br>    
+    <br>
     <select name='manipedi'>
-        <option value='manicure'>Manicure</option>    
-        <option value='pedicure'>Pedicure</option>      
+        <option value='manicure'>Manicure</option>
+        <option value='pedicure'>Pedicure</option>
+        <option value='both'>Both</option>
     </select>
     <br>
-    
-    <input type='submit' value='Submit'>    
-     
+
+    <input type='submit' value='Submit'>
+
+
+    @*<fieldset>
+            <legend>Please Select Your Color Option</legend>
+            <table border="1" width="100%">
+
+            </table>
+        </fieldset>*@
 </form>
+<br />
+<div>
+<h4>Fall 2020's Best Nail Colors to Wear</h4>
+<div><div class='box burntOrange'></div>Orosa's Burnt Orange</div>
+<br>
+<div><div class='box deepTeal'></div>Orly's Deep Teal</div>
+<br>
+<div><div class='box goldenYellow'></div>Pop Beauty's Golden Yellow</div>
+<br>
+<div><div class='box oliveGreen'></div>Olive&June's Olive Green</div>
+<br>
+<div><div class='box burgundyBeauty'></div>OPI's Burgundy Beauty</div>
+</div>
